src/main/java/com/example/finalprojectdtomarket/_core/errors/exception/Exception500.java
package com.example.finalprojectdtomarket._core.errors.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String msg) {
        super(msg);
    }
}